--- a/index.html
+++ b/index.html
@@ -10,13 +10,15 @@
 </head>
 
 <body>
+  <header class="nav-bar">
+    <a href="#"><h3 class="logo">Mental</h3></a>
+  </header>
   <main>
     <div class="modal" id="todo_form">
       <div class="header">
         <div class="titulo">Adicionar Tarefa</div>
         <button class="btn-modal close-modal">&times;</button>
       </div>
-
       <div class="body">
         <input type="text" id="input_add" />
         <input type="submit" class="close-modal" value="ADD Tarefa" id="input_submit" />
