--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <header class="nav-bar">
-    <a href="#"><h3 class="logo">Mental</h3></a>
+    <a class="logo" href="#">Mental</a>
   </header>
   <main>
     <div class="modal" id="todo_form">
